new attempt without a server-side array

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     	</div>
       <form id = "messagebox" method="POST">
     	 <input id = "inputText" type="text" autofocus="autofocus"/>
-       <input id = "messagesubmit" type="submit" value="Send!"/>
+       <input id = "messagesubmit" type="submit" value=">"/>
       </form>
     </div>
   </div>
@@ -62,7 +62,7 @@
   <!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
-  <script src="chatscript.js"></script>
+  <script src="chat_client.js"></script>
   <!-- end scripts -->
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
